# Chess-game

./: README.md  runChess.sh
data/: res.xml
proj.cmake/: CMakeLists.txt  build_emsc.bat  build_emsc_release.bat  run.sh
src/: Chess.cpp  Chess.h  Field.cpp  Field.h  LINK.h  MyStage.cpp  MyStage.h  main.cpp
